--- a/WebApplication2/solicitud.html
+++ b/WebApplication2/solicitud.html
@@ -29,9 +29,7 @@
         </ul>
     </nav>
 
-    <h1>Contá Conmigo!</h1>
-
-    <h2>Solicitud Donantes</h2>
+        <h1><center>Contá Conmigo! - Solicitud Donantes</center></h1>
 
     <!--Form-->
     <div class="container">
@@ -76,11 +74,11 @@
             <div class="form-group">
                 <label class="control-label col-sm-2" for="factorsanguineo">Factor Sanguíneo</label>
                     <div class="col-sm-10">
-                        <label class="container">+
+                        <label class="container">(+)
                         <input type="checkbox">
                         <span class="checkmark"></span>
                         </label>
-                        <label class="container">-
+                        <label class="container">(-)
                         <input type="checkbox">
                         <span class="checkmark"></span>
                         </label>
@@ -97,7 +95,7 @@
                 <label class="control-label col-sm-2"  for="institución">Institución</label>
                 <div class="col-sm-10">
                     <div class="dropdown">
-                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Seleccione una Opción
+                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Seleccione una Institución
                         <span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li><a href="#">Sanatorio Parque</a></li>
@@ -140,8 +138,10 @@
                     <div class="col-sm-10">
                             <input type="cantdonantes" class="form-control" id="cantdonantes" placeholder="Ingrese sus comentarios">
                     </div>
-                </div>
-            <button type="enviar" class="btn btn-default">Enviar Formulario</button>
+            </div>
+            <div class="text-right">
+                <button type="enviar">Enviar Formulario</button>
+            </div>
             </form>
             </div>
 
