--- a/WebApplication2/Main1.html
+++ b/WebApplication2/Main1.html
@@ -34,7 +34,7 @@
             <li><a href="#contactanos">CONTÁCTANOS</a></li>
         </ul>
     -->
-        <h1>Contá Conmingo!</h1>
+        <h1>Contá Conmingo! Red de Donantes</h1>
         <div>
             <img src="./images/banner.jpg" class="img-rounded" alt="Picture about blood donation">
         </div>
