--- a/WebApplication2/ContaConmigo.html
+++ b/WebApplication2/ContaConmigo.html
@@ -25,23 +25,15 @@
             <li id="mmct2"><a href="#">CONTÁCTANOS</a></li>
         </ul>
     </nav>
-    <!--
-        <ul>
-            <li><a class="active" href="/Solicitud.html">SOLICITUD</a></li>
-            <li><a class="active" href="#Novedades">NOVEDADES</a></li>
-            <li><a href="#MedulaOsea">MÉDULA ÓSEA</a></li>
-            <li><a href="#InformacionDonante">INFORMACIÓN PARA EL DONANTE</a></li>
-            <li><a href="#contactanos">CONTÁCTANOS</a></li>
-        </ul>
-    -->
-        <h1>Contá Conmingo! Red de Donantes</h1>
-        <div>
-            <img src="./images/banner.jpg" class="img-rounded" alt="Picture about blood donation">
-        </div>
 
-        <p>Bienvenidos a Contá Conmigo!, página destinada a contactar a aquellas personas que necesitan donantes de sangre para algún familiar y a aquellas dispuestas a donar.</p>
-        <p>Donar sangre es un acto desinteresado, que contribuye a salvar vidas y a mejorar la salud. </p>
-        <p>9 de cada 10 personas necesitarán recibir sangre transfundida en algún momento de su vida</p>
+    <h1>Contá Conmingo! Red de Donantes</h1>
+    <div>
+        <img src="./images/banner.jpg" class="img-rounded" width="FULL" height="277" alt="Picture about blood donation">
+    </div>
+    <hr>
+    <p>Bienvenidos a Contá Conmigo!, página destinada a contactar a aquellas personas que necesitan donantes de sangre para algún familiar y a aquellas dispuestas a donar.</p>
+    <p>Donar sangre es un acto desinteresado, que contribuye a salvar vidas y a mejorar la salud. </p>
+    <p>9 de cada 10 personas necesitarán recibir sangre transfundida en algún momento de su vida</p>
 
 </body>
 </html>
