--- a/WebApplication2/solicitud.html
+++ b/WebApplication2/solicitud.html
@@ -29,28 +29,30 @@
         </ul>
     </nav>
 
-        <h1><center>Contá Conmigo! - Solicitud Donantes</center></h1>
+    <h1><center>Contá Conmingo - Red de Donantes</center></h1>
+    <h2>Solicitud de Donantes</h2>
+    <h4>Por favor, completa el siguiente formulario:</h4>
 
     <!--Form-->
     <div class="container">
-        <h3>Por favor, completa el siguiente formulario</h3>
+
         <form class="form-horizontal">
             <div class="form-group">
                 <label class="control-label col-sm-2" for="lastname">Apellido del Paciente</label>
                 <div class="col-sm-10">
-                    <input type="lastname" class="form-control" id="lastname" placeholder="Ingrese el apellido del Paciente">
+                    <input type="lastname" class="form-control" id="lastname" alt="Ingrese apellido del paciente">
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-2" for="nombrepaciente">Nombre del Paciente</label>
                 <div class="col-sm-10">
-                    <input type="firstname" class="form-control" id="firstname" placeholder="Ingrese nombre completo ">
+                    <input type="firstname" class="form-control" id="firstname" alt="Ingrese nombre completo ">
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-2" for="CantDonantes">Cant. Donantes </label>
                 <div class="col-sm-10">
-                        <input type="cantdonantes" class="form-control" id="cantdonantes" placeholder="Ingrese la cantidad de donantes">
+                        <input type="cantdonantes" class="form-control" id="cantdonantes" alt="Ingrese la cantidad de donantes">
                 </div>
             </div>
             <div class="form-group">
@@ -88,7 +90,7 @@
             <div class="form-group">
                 <label class="control-label col-sm-2" for="fechalimite">Fecha Límite Reposición</label>
                 <div class="col-sm-10">
-                        <input type="cantdonantes" class="form-control" id="fechalimite" placeholder="DD/MM/AAAA">
+                        <input type="cantdonantes" class="form-control" id="fechalimite" alt="DD/MM/AAAA">
                 </div>
             </div>
             <div class="form-group">
