--- a/WebApplication2/novedades.html
+++ b/WebApplication2/novedades.html
@@ -18,6 +18,7 @@
     <nav id="tb">
         <div id="tbic">Ξ</div>
         <ul id="tbul">
+			<li id="sol" > <img src="./Images/MainLogo.jpg" alt="Main Logo Picture"></li>
             <li id="sol" > <a href="solicitud.html">SOLICITUD</a></li>
             <li id="nov" class="sel"><a href="novedades.html">NOVEDADES</a></li>
             <li id="medos"><a href="#">MÉDULA ÓSEA</a></li>
